# DAVIT-CAPSTONE

./: LICENSE  README.md  pyproject.toml
src/: dashboard_streamlit.py  database.py  globals.py  models.py  utils.py
src/app/: main.py  middlewares.py  pareto_nbd.py  utils.py
src/app/routers/: customers.py  example_router.py  health.py  pareto.py  preview.py  products.py  sales.py
src/config/: __init__.py  app.py  env_vars.py
src/schemas/: app.py  crud.py  pareto.py
tests/: conftest.py  data.json  data_parser.py  test_app.py  utils.py
