[tool.poetry]
name = "Davit-Capstone"
version = "1.0.0"
description = "Api"
authors = ["Davit Abgaryan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
fastapi = "0.104.1"
uvicorn = { extras = ["standard"], version = "0.23.2" }
pyyaml = "6.0"
pydantic-settings = "2.0.3"
pydantic = "2.4.2"
boto3 = "^1.34.46"
sqlalchemy = "^2.0.41"
pandas = "^2.2.3"
lifetimes = "^0.11.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.0"
pytest-coverage = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
